themes/bootstrap3/less/components/search.less
/* ... */
/* ------ GRID VIEW ------ */
.search-grid::after {
  display: table;
  clear: both;
  content: '';
}
.grid-result {
  display: flex;
  float: left;
  width: 50%;

  .grid-body {
    flex: 1;
    h2 {
      font-size: inherit;
      line-height: @line-height-base;
      margin: 0;

      .title {
        display: inline-block;
        font-weight: bold;
      }
    }
  }
  .grid-checkbox {
    flex: 0 0 30px;
    min-width: 0;
  }
  .label,
  .format {
    display: inline-block;
    white-space: normal;
  }
}
.grid-large-break,
.grid-small-break { clear: both; }
@media (min-width: 992px) {
  .grid-result{ width: 25%; }
  .grid-small-break { display: none; }
}

.searchtools {
  h2 {
    display: inline-block;
    margin: 0;
    font-size: inherit;
    font-weight: bold;
    vertical-align: middle;
  }
  ul {
    display: inline-block;
    margin: 0;
    padding-left: 0;
    li {
      display: inline;
      &:not(:first-child):before {
        content: '\2013'; // n-dash
      }
      a {
        padding: 0 .5rem;
        white-space: nowrap;
      }
    }  
  }
}

/* ------ COMBINED ------ */
// No sidebar in combined:
.template-dir-combined.template-name-results.offcanvas {
  margin: 0;
  padding: 0;
}

.combined-search-container.grid {
  margin-left: 1rem;
  margin-right: 1rem;
}

.combined-jump-links {
  margin-left: 1rem;
  margin-right: 1rem;

  ul {
    display: inline;
    list-style: none;
    padding-left: 0;

    li {
      display: inline;
      white-space: nowrap;
      &:not(:first-child):before {
        content: '\2013'; // n-dash
      }
    }
  }
}

.combined-column {
  margin-left: 1rem;
  margin-right: 1rem;
  padding: 0;
}

@media (min-width: 768px) {
  .combined-search-container {
    display: flex;
    padding-left: 1rem;

    &.grid {
      display: grid;
      column-gap: 1rem;
      padding-right: 1rem;
      margin-left: 0;
      margin-right: 0;
      // grid-template-columns is set dynamically in stack-grid.phtml.
    }

    .result { margin-left: 0; }
    .result-body {
      float: none;
      width: auto;
    }
    .result-links { display: none; }
  }
  .combined-column {
    flex: 0 1 100%;
    margin-left: 0;
  }
}

.wikipedia img { margin-right: 1rem; }
.geoItem {
    font-size: .9em;
    margin: 0px 0px 10px;
}
.title-in-heading {
  font-size: inherit;
  font-style: italic;
}

/* ------ TOP FACETS ------ */
.top-title {
  display: inline-block;
  padding-top: .5rem;
  padding-left: .5rem;
  font-weight: bold;
  color: #000;
}
.top-title .fa {
  width: 1rem;
  text-align: center;
}
@media (min-width: 768px) {
  .top-title { padding-top: 0; }
  .top-title .fa { display: none; }
  .top-facets .collapse {
    display: block;
    height: auto !important;
  }
}

/* ------ CURRENT FILTERS ------ */
.active-filters {
  clear: both;
  display: flex;
  gap: 1rem;
  align-items: start;
  margin-block-start: 0.5rem;

  .retain-filters {
    float: right;
  }
  .checkbox {
    flex: 1;
    white-space: nowrap;
  }
  .filters-toggle {
    flex: 1;
    display: inline-block;
    margin-top: 10px;
    cursor: pointer;
    &::after {
      content: '\25B2';
    }
    &.collapsed::after {
      content: '\25BC';
    }
    @media (min-width: @screen-sm-min) {
      float: left;
    }
  }
  .filters {
    flex: 10 1 auto;
    margin-block-start: 0.25rem;

    .collapse {
      display: none;
      .in {
        display: inline-block;
      }
    }

    .checkbox label {
      display: inline-block;
      padding: 10px 0px;
      @media (max-width: @screen-sm-min) {
        float: right;
        padding: 0px;
      }
    }
    .filters-term {
      font-size: 0.8em
    }
    .filter-value {
      display: inline-block;
      margin-block: 2px;
      padding: 2px 8px;
      font-weight: 600;
      color: #fff;
      white-space: nowrap;
      text-decoration: none;
      background: @list-group-active-bg;

      &:focus {
        box-shadow: 0 0 0 2px #000;
      }
    }
    .checkbox {
      display: inline;
      padding-left: 0;
      padding-right: 0;
      @media (min-width: @screen-sm-min) {
        padding-right: 20px;
      }
    }
    .title-value-pair {
      display: inline-block;
    }
  }
}

.toolbar-btn,
.record-nav .cart-add,
.record-nav .cart-remove,
.reset-filters-btn {
  &:extend(.icon-link all);
  gap: 0.25rem;

  margin-bottom: 4px;
  padding: .5rem 1rem;
  border: 0;
  color: #555;
  text-decoration: none;
  background-color: rgba(0,0,0,.05);
  border-radius: 4px;

  &:hover {
    background-color: rgba(0,0,0,.1);
  }
}
.reset-filters-btn {
  flex: none;
}

.active-filters .filters a.filter-value:hover,
.active-filters .filters a.filter-value:focus {
  color: #fff;
  text-decoration: line-through;
  background-color: @state-danger-text;
}
.search-filter-dropdown {
  display: inline-block;
  .btn {
    color: #fff;
    background: @list-group-active-bg;
    vertical-align: baseline;
  }
  .btn::after {
    content: "\f107";
    font-family: "FontAwesome";
  }

  .dropdown-menu {
    .filters-term {
      display: block;
      text-align: center;
    }
    .filter-value {
      display: flex;

      .text {
        flex-grow: 1;
        margin-right: 0.5em;
      }
      a {
        flex-shrink: 0;
        margin: 0;
      }
    }
  }
}

.search-schedule-header {
  text-decoration: underline;
  text-decoration-style: dotted;
  cursor: pointer;
}

.search-history-table {
  &:extend(.table all);
  &:extend(.table-striped all);
}
table.search-history-table {
  table-layout: auto;

  tbody > tr > td { vertical-align: middle; }
  .history_time {
    width: 20%;
  }
}
/* ... */

